Fix misaligned text in buttons

--- a/website/static/css/landing.css
+++ b/website/static/css/landing.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
 
+  line-height: 0;
   font-size: 22px;
   background: #FF6E00;
   color: white;
